add ability to reboot system

--- a/static/examples/editor2/index.html
+++ b/static/examples/editor2/index.html
@@ -88,6 +88,9 @@
 	    <a style="float:right" id="revertButton" class="btn btn-default" href="#" role="button">&laquo; Revert</a>
 	    <a id="saveButton" class="btn btn-default" href="#" role="button">Save &raquo;</a>
 	  </p>
+          <p>
+	    <a id="rebootButton" class="btn btn-default" href="#" role="button">Reboot &raquo;</a>
+	  </p>
 
 	</div>
 
